--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 body {
     background-color: var(--c_tan);
     padding: 0px;
-    margin: 0px;
+    margin: 0;
     color: var(--c_white);
     font-family: 'Poppins', sans-serif;
     background: linear-gradient(-45deg, var(--c_tan), var(#839fd4), var(#839fd4), var(--c_darkTan));
@@ -37,364 +37,13 @@ html {
     box-sizing: border-box;
 }
 
-#headerTitle {
-    height: max(50vh, 40vw);
-    display: flex;
-    justify-content: space-evenly;
-    background-image: url("bg2.png");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
-
-#headerTitle img {
-    z-index: 3;
-}
-
-.centered {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-#mission {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 2vh;
-    padding: 2vh;
-}
-
-.missionCard {
-    height: 100%;
-    width: 60%;
-    margin: 1vw;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 1vw;
-    background-color: var(--c_green);
-    border-radius: 2vw;
-}
-
-.missionImg {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 2vw;
-}
-
-.missionCard>div {
-    padding: 10px;
-}
-
-.missionVideo {
-    position: relative;
-    padding-top: calc(56.25% * 0.8);
-    width: 80%;
-}
-
-iframe {
-    border-style: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
+.content {
+    display:block;
     width: 100%;
-    height: 100%;
-    border-radius: 1vw;
+    height: 100vh;
 }
 
-#signup {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    border-radius: 2vw;
-}
-
-#signup h1 {
-    background-color: var(--c_red);
-    padding: 2vw;
-    border-radius: 2vw;
-}
-
-#signupOptions {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: var(--c_red);
-    border-radius: 2vw;
-    padding: 1vw;
-}
-
-#signupPlan {
-    background-color: var(--c_red);
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
-}
-
-#about {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-#about>div {
-    width: 45vw;
-    margin: 2vw;
-    padding: 2vw;
-}
-
-h1 {
-    font-size: min(3vh, 4vw);
-    margin: auto;
-    text-align: center;
-}
-
-h2 {
-    font-size: min(3vh, 4vw);
-    margin: auto;
-    text-align: center;
-}
-
-p {
-    font-size: min(2vh, 3vw);
-}
-
-#headerBar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: var(--c_red);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 4;
-    font-size: 2vh;
-}
-
-#headerBar li {
-    float: left;
-}
-
-#headerBar li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-#content {
-    max-width: 130vh;
-    display: block;
-    margin: 0 auto;
-}
-
-#slideshow {
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: column;
-}
-
-#slideshow img {
-    width: 95%;
-}
-
-a {
-    -webkit-transition: color 0.5s linear;
-    -moz-transition: color 0.5s linear;
-    -o-transition: color 0.5s linear;
-    transition: color 0.5s linear;
-    text-decoration: none;
-    color: var(--c_tan);
-}
-
-a:hover {
-    color: black;
-}
-
-#profile {
-    width: 40vw;
-}
-
-#pfp {
-    width: 100%;
-    border-radius: 50%;
-}
-
-.banner {
-    border-radius: 1vw;
-    margin: 1vw;
-    padding: 1vw;
-}
-
-#groupBanner {
-    background-color: var(--c_blue);
-}
-
-#individualBanner {
-    background-color: var(--c_green);
-}
-
-.signupBlock {
-    width: 100%;
-    padding: 10px;
-    font-size: min(2vh, 2vw);
-}
-
-@keyframes glowing {
-    0% {
-        background-color: var(--c_tan);
-    }
-    50% {
-        background-color: var(--c_darkTan);
-    }
-    100% {
-        background-color: var(--c_tan);
-    }
-}
-
-.buttonContainer {
-    display: flex;
-    justify-content: center;
-}
-
-.signupButton {
-    animation: glowing 1300ms infinite;
-    border: none;
-    color: darkslategray;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: min(2vh, 2vw);
-    border-radius: 12px;
-}
-
-.signupButton span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-}
-
-.signupButton span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-}
-
-.signupButton:hover {
-    cursor: pointer;
-}
-
-.signupButton:hover span {
-    padding-right: 25px;
-}
-
-.signupButton:hover span:after {
-    opacity: 1;
-    right: 0;
-}
-
-#bio {
-    background-color: var(--c_red);
-    border-radius: 2vw;
-}
-
-#contactButtons {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-#contactButtons a {
-    -webkit-transition: none;
-    -moz-transition: none;
-    -o-transition: none;
-    transition: none;
-}
-
-#contactButtons a:hover {
-    opacity: 0.5;
-    color: white;
-}
-
-.fa {
-    padding: 2vw;
-    width: 6vw;
-    height: 6vw;
-    text-align: center;
-    text-decoration: none;
-    color: var(--c_white);
-    border-radius: 50%;
-}
-
-.fa::before {
-    font-size: 6vw;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-linkedin {
-    background: #007bb5;
-}
-
-.fa-envelope {
-    background: var(--c_green);
-}
-
-.overlay {
-    /* Height & width depends on how you want to reveal the overlay (see JS below) */
-    height: 100%;
-    width: 0;
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    left: 0;
-    top: 0;
-    background-color: rgb(0, 0, 0);
-    /* Black fallback color */
-    background-color: rgba(0, 0, 0, 0.9);
-    /* Black w/opacity */
-    overflow-x: hidden;
-    /* Disable horizontal scroll */
-    transition: 0.5s;
-    /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
-}
-
-.overlay-content {
-    position: relative;
-    top: 25%;
-    /* 25% from the top */
-    width: 100%;
-    /* 100% width */
-    text-align: center;
-    /* Centered text/links */
-    margin-top: 30px;
-    /* 30px top margin to avoid conflict with the close button on smaller screens */
-}
-
-#footer {
-    text-align: center;
-    font-size: min(2vw, 2vh);
-    padding: min(1.5vw, 1.5vh);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--c_blue);
+#jitsiConferenceFrame0{
+    width:1000px;
+    height:1000px;
 }
