--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
     --c_red: #a7373d;
     --font: 'Poppins';
     -webkit-backface-visibility: hidden;
+    min-width: 0;
+    min-height: 0;
 }
 
 div {
@@ -178,7 +180,6 @@ html {
 
 #mapHolder {
     display: none;
-    /*start hidden*/
     text-align: center;
     overflow: hidden;
     min-width: 0;
@@ -248,6 +249,9 @@ html {
     overflow: hidden;
     min-width: 0;
     min-height: 0;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .mapLayout {
@@ -257,6 +261,17 @@ html {
 
 .mapBox {
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: visible;
+    flex-basis: auto;
+    padding: 1vw;
+    margin: 0;
+}
+
+.mapBox::after {
+    content: attr(data-tool-tip);
 }
 
 .green {
@@ -493,6 +508,6 @@ html {
     display: inline-block;
     background-color: var(--c_blue);
     padding: 1vw;
-    font-size: max(3vw,6vh);
+    font-size: max(3vw, 6vh);
     width: max-content;
 }
