--- a/styles.css
+++ b/styles.css
@@ -266,12 +266,26 @@ html {
     align-items: center;
     overflow: visible;
     flex-basis: auto;
-    padding: 1vw;
-    margin: 0;
+    font-size: 1em;
 }
 
 .mapBox::after {
     content: attr(data-tool-tip);
+}
+
+#tempHolder{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width:100%;
+}
+
+.mapBoxText{
+    width:100%;
+    padding:1vw;
+    font-size: 1.5em;
+    border-radius: 1.5vw;
+    padding:2vw;
 }
 
 .green {
